# rusty-crab-cookpad-server

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
Dockerfiles/minio/: policy.json
data/init/: user_types.sql
migrations/2021-10-14-081903_create_users/: up.sql
migrations/2021-10-14-081934_create_comments/: up.sql
migrations/2021-10-14-081935_create_comments/: up.sql
migrations/2021-10-14-081935_create_recipes/: up.sql
migrations/2021-10-14-081935_create_user_types/: down.sql  up.sql
migrations/2021-10-14-081936_create_authorities/: down.sql  up.sql
migrations/2021-10-14-081936_create_categories/: up.sql
migrations/2021-10-14-081936_create_ingredients/: up.sql
migrations/2021-10-14-081936_create_procedures/: up.sql
migrations/2021-10-14-081936_create_tags/: up.sql
migrations/2021-10-14-081937_create_categories/: up.sql
migrations/2021-10-14-081938_create_ingredients/: up.sql
migrations/2021-10-14-081939_create_procedures/: down.sql  up.sql
migrations/2021-10-14-081940_create_recipes/: up.sql
migrations/2021-10-14-081941_create_tags/: up.sql
migrations/2021-10-17-134135_create_recipes_categories_categorization/: down.sql  up.sql
migrations/2021-10-17-134224_create_recipes_tags_tagging/: down.sql  up.sql
migrations/2021-10-17-134435_create_user_types_authorities_ownership/: down.sql  up.sql
migrations/2021-10-22-102030_add_password_api_key_to_users/: down.sql  up.sql
migrations/2021-10-22-103112_add_discription_to_recipes/: down.sql  up.sql
src/: api.rs  main.rs  models.rs  schema.rs
src/api/: tag.rs  (+3 more)
(+15 files in other folders)
