[package]
name = "rusty-crab-cookpad-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features=["json", "msgpack", "uuid"]}
diesel = { version = "1", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"]}
dotenv = "0.15.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]